# sim-web

./: .gitignore  BROCHURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  features.toml  release-plz.toml
crates/sim-lib-intent/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-intent/recipes/: book.toml
crates/sim-lib-intent/recipes/01-basics/: chapter.toml
crates/sim-lib-intent/src/: citizen.rs  codec.rs  cookbook.rs  gesture.rs  glasses.rs  glasses_tests.rs  kinds.rs  lib.rs  model.rs  shapes.rs  tests.rs  wrist.rs  wrist_tests.rs
crates/sim-lib-scene/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-scene/recipes/: book.toml
crates/sim-lib-scene/recipes/01-basics/: chapter.toml
crates/sim-lib-scene/src/: build.rs  citizen.rs  codec.rs  cookbook.rs  diff.rs  glance.rs  kinds.rs  lib.rs  model.rs  shapes.rs  tests.rs  text.rs
crates/sim-lib-view/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-view-agent/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-view-agent/recipes/: book.toml
crates/sim-lib-view-agent/recipes/01-basics/: chapter.toml
crates/sim-lib-view-agent/src/: change_capsule.rs  change_capsule_tests.rs  cookbook.rs  editor.rs  lib.rs  mission_control.rs  mission_control_fixture.rs  mission_control_tests.rs  monitor.rs  monitor_tests.rs  persist.rs  replay.rs  run.rs  tests.rs  view.rs
crates/sim-lib-view-bridge/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-view-bridge/recipes/: book.toml
crates/sim-lib-view-bridge/recipes/01-basics/: chapter.toml
crates/sim-lib-view-bridge/src/: cookbook.rs  glasses_review.rs  glasses_tests.rs  lib.rs  surface.rs  tests.rs
crates/sim-lib-view-bridge/src/surface/: controls.rs
crates/sim-lib-view-codec/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-view-codec/recipes/: book.toml
crates/sim-lib-view-codec/recipes/01-basics/: chapter.toml
crates/sim-lib-view-codec/src/: cookbook.rs  lib.rs  multicodec.rs  shape.rs  tests.rs
crates/sim-lib-view-daw/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-view-daw/recipes/: book.toml
crates/sim-lib-view-daw/recipes/01-basics/: chapter.toml
crates/sim-lib-view-daw/recipes/02-performance-workbench/: chapter.toml
crates/sim-lib-view-daw/src/: arranger.rs  arranger_tests.rs  component.rs  cookbook.rs  daw.rs  dx7.rs  instrument.rs  instrument_tests.rs  keyboard.rs  keyboard_tests.rs  lib.rs  modular.rs  modular_fixture.rs  param.rs  piano_roll.rs  piano_roll_tests.rs  placement.rs  placement_tests.rs  player_rack.rs  poly.rs  ps3300.rs  recipe_tests.rs  specialized.rs  stream.rs  synth.rs  system55.rs  system700.rs  tests.rs
crates/sim-lib-view-device/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-view-device/recipes/: book.toml
crates/sim-lib-view-device/recipes/01-basics/: chapter.toml
crates/sim-lib-view-device/src/: adapter.rs  clock.rs  consent.rs  consent_tests.rs  degrade.rs  glance.rs  glance_adapter.rs  glance_tests.rs  glasses_route_tests.rs  glasses_routes.rs  ladder.rs  lib.rs  loop.rs  profile.rs  profile_surface.rs  profile_tests.rs  rate.rs  reaper.rs  split.rs  split_tests.rs  timing_tests.rs  worn_caps.rs
crates/sim-lib-view-doc/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-view-doc/recipes/: book.toml
crates/sim-lib-view-doc/src/: citizen.rs  cookbook.rs  doc.rs  lens.rs  lib.rs  tests.rs
crates/sim-lib-view-math/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-view-math/recipes/: book.toml
crates/sim-lib-view-math/src/: cookbook.rs  lib.rs  matrix.rs  num.rs  plot.rs  sweep.rs  symbolic.rs  tests.rs
crates/sim-lib-view-spatial/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-view-spatial/recipes/: book.toml
crates/sim-lib-view-spatial/src/: adapter_tests.rs  co_use.rs  consent.rs  consent_tests.rs  encode.rs  glance_map.rs  halo_glance.rs  layout.rs  layout_tests.rs  lib.rs  pose_view.rs  predict.rs  rank.rs  rank_tests.rs  reproject.rs  reproject_loop.rs  tests.rs  timing_tests.rs  voice_site.rs  voice_site_tests.rs  world.rs  world_tests.rs
crates/sim-lib-view-wasm-frame/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-view-wasm-frame/recipes/: book.toml
crates/sim-lib-view-wasm-frame/src/: cookbook.rs  host.rs  lib.rs  tests.rs
crates/sim-lib-view-wrist/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-view-wrist/recipes/: book.toml
crates/sim-lib-view-wrist/src/: budget.rs  budget_tests.rs  command.rs  command_tests.rs  consent.rs  consent_tests.rs  fleet.rs  fleet_tests.rs  lib.rs  pacing.rs  pacing_tests.rs  voice.rs  voice_tests.rs
crates/sim-lib-view/glasses/: bringup
crates/sim-lib-view/recipes/: book.toml
crates/sim-lib-view/src/: bringup.rs  bringup_tests.rs  citizen.rs  codec.rs  contract.rs  cookbook.rs  dispatch.rs  embed.rs  lib.rs  mode.rs  mode_tests.rs  palette.rs  profiles.rs  render.rs  set_lens.rs  stack.rs  stack_tests.rs  surface.rs  surface_tests.rs  tests.rs  universal.rs  universal_editor.rs  universal_tests.rs  universal_view.rs
crates/sim-lib-web-bridge/: BROCHURE.md  Cargo.toml  README.md  build.rs
crates/sim-lib-web-bridge/recipes/: book.toml
crates/sim-lib-web-bridge/src/: cookbook.rs  device_peer.rs  fabric.rs  fixture.rs  glasses.rs  glasses_client_tests.rs  glasses_session.rs  history.rs  history_tests.rs  host.rs  lib.rs  placement.rs  placement_tests.rs  remote.rs  remote_tests.rs  replay_tests.rs  session.rs  surface_session_tests.rs  sync.rs  tests.rs  transport.rs
crates/sim-lib-web-layout/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-web-layout/recipes/: book.toml
crates/sim-lib-web-layout/src/: citizen.rs  cookbook.rs  layout.rs  lib.rs  palette.rs  palette_tests.rs  pane.rs  scene.rs  tests.rs  value.rs
crates/sim-web-shell/: BROCHURE.md  Cargo.toml  README.md
crates/sim-web-shell/recipes/: book.toml
crates/sim-web-shell/src/: assets.rs  atelier.rs  cli.rs  glasses_asset_tests.rs  lib.rs  live.rs  main.rs  serve.rs  tests.rs
crates/sim-web-shell/tests/: demos.rs
crates/sim-web-shell/web/: atelier.html  cookbook.html  index.html
xtask/: Cargo.toml  (+1 more)
(+100 files in other folders)
