
[workspace]
resolver = "3"
members = [
  "crates/sim-lib-intent",
  "crates/sim-lib-scene",
  "crates/sim-lib-view",
  "crates/sim-lib-view-bridge",
  "crates/sim-lib-view-agent",
  "crates/sim-lib-view-codec",
  "crates/sim-lib-view-daw",
  "crates/sim-lib-view-device",
  "crates/sim-lib-view-doc",
  "crates/sim-lib-view-math",
  "crates/sim-lib-view-spatial",
  "crates/sim-lib-view-wasm-frame",
  "crates/sim-lib-view-wrist",
  "crates/sim-lib-web-bridge",
  "crates/sim-lib-web-layout",
  "crates/sim-web-shell",
  "xtask",
]

[workspace.package]
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/sim-nest/sim-web"
homepage = "https://github.com/sim-nest/sim-web"

[workspace.lints.rust]
unsafe_code = "forbid"
