
[workspace]
resolver = "3"
members = [
  "crates/sim-lib-intent",
  "crates/sim-lib-scene",
  "crates/sim-lib-view",
  "crates/sim-lib-view-bridge",
  "crates/sim-lib-view-agent",
  "crates/sim-lib-view-codec",
  "crates/sim-lib-view-daw",
  "crates/sim-lib-view-device",
  "crates/sim-lib-view-doc",
  "crates/sim-lib-view-math",
  "crates/sim-lib-view-spatial",
  "crates/sim-lib-view-wasm-frame",
  "crates/sim-lib-view-wrist",
  "crates/sim-lib-web-bridge",
  "crates/sim-lib-web-layout",
  "crates/sim-web-shell",
  "xtask",
]

[workspace.package]
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/sim-nest/sim-web"
homepage = "https://github.com/sim-nest/sim-web"

[workspace.lints.rust]
unsafe_code = "forbid"

[patch.crates-io]
sim-lib-numbers-tensor = { git = "https://github.com/sim-nest/sim-numbers", rev = "1713431936f6c0d9517dbb9af4b4515da2bb6c2d" }
sim-lib-numbers-tensor-bcast = { git = "https://github.com/sim-nest/sim-numbers", rev = "1713431936f6c0d9517dbb9af4b4515da2bb6c2d" }
sim-lib-numbers-tensor-cmplxf = { git = "https://github.com/sim-nest/sim-numbers", rev = "1713431936f6c0d9517dbb9af4b4515da2bb6c2d" }
sim-lib-numbers-tensor-rat64 = { git = "https://github.com/sim-nest/sim-numbers", rev = "1713431936f6c0d9517dbb9af4b4515da2bb6c2d" }
