[package]
name = "sim-lib-intent"
version = "0.1.3"
edition = "2024"
license = "MPL-2.0"
description = "Intent value model, gesture algebra, and codec:intent."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-web"
homepage = "https://github.com/sim-nest/sim-web"

[dependencies]
sim-citizen = { version = "0.1.0" }
sim-citizen-derive = { version = "0.1.0" }
sim-codec = { version = "0.1.0" }
sim-cookbook = { version = "0.1.0" }
sim-kernel = { version = "0.1.0" }
sim-shape = { version = "0.1.0" }
sim-value = { version = "0.1.0" }

[build-dependencies]
sim-cookbook = { version = "0.1.0" }

[dev-dependencies]
sim-test-support = { version = "0.1.0" }

[lints]
workspace = true
