[package]
name = "sim-lib-view-agent"
version = "0.1.2"
edition = "2024"
license = "MPL-2.0"
description = "Agent and topology composer lens plus the live monitor for SIM Web."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-web"
homepage = "https://github.com/sim-nest/sim-web"

[dependencies]
sim-cookbook = { version = "0.1.0" }
sim-kernel = { version = "0.1.0" }
sim-lib-intent = { version = "0.1.0", path = "../sim-lib-intent" }
sim-lib-scene = { version = "0.1.0", path = "../sim-lib-scene" }
sim-lib-stream-core = { version = "0.1.2" }
sim-lib-topology = { version = "0.1.0" }
sim-value = { version = "0.1.0" }

[build-dependencies]
sim-cookbook = { version = "0.1.0" }

[dev-dependencies]
sim-kernel = { version = "0.1.0", features = ["test-support"] }
sim-test-support = { version = "0.1.0" }

[lints]
workspace = true
