[package]
name = "sim-lib-view-bridge"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "Reversible BRIDGE packet review surface for SIM Web."
readme = "README.md"
publish = false
repository = "https://github.com/sim-nest/sim-web"
homepage = "https://github.com/sim-nest/sim-web"

[dependencies]
sim-codec-bridge = { git = "https://github.com/sim-nest/sim-codecs", rev = "cd52b62a59138771f7d8c3865ce17b4f425357c6", package = "sim-codec-bridge" }
sim-cookbook = { version = "0.1.0" }
sim-kernel = { version = "0.1.0" }
sim-lib-intent = { version = "0.1.0", path = "../sim-lib-intent" }
sim-lib-scene = { version = "0.1.0", path = "../sim-lib-scene" }
sim-lib-view = { version = "0.1.2", path = "../sim-lib-view" }
sim-value = { version = "0.1.0" }

[build-dependencies]
sim-cookbook = { version = "0.1.0" }

[dev-dependencies]
sim-kernel = { version = "0.1.0", features = ["test-support"] }
sim-test-support = { version = "0.1.0" }

[lints]
workspace = true
