[package]
name = "sim-lib-view-bridge"
version = "0.1.1"
edition = "2024"
license = "MPL-2.0"
description = "Reversible BRIDGE packet review surface for SIM Web."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-web"
homepage = "https://github.com/sim-nest/sim-web"

[dependencies]
sim-codec-bridge = { version = "0.1.0" }
sim-cookbook = { version = "0.1.0" }
sim-kernel = { version = "0.1.0" }
sim-lib-intent = { version = "0.1.0", path = "../sim-lib-intent" }
sim-lib-scene = { version = "0.1.0", path = "../sim-lib-scene" }
sim-lib-view = { version = "0.1.2", path = "../sim-lib-view" }
sim-lib-view-device = { version = "0.1.0", path = "../sim-lib-view-device" }
sim-value = { version = "0.1.0" }

[build-dependencies]
sim-cookbook = { version = "0.1.0" }

[dev-dependencies]
sim-kernel = { version = "0.1.0", features = ["test-support"] }
sim-lib-view-spatial = { version = "0.1.0", path = "../sim-lib-view-spatial" }
sim-test-support = { version = "0.1.0" }

[lints]
workspace = true
