[package]
name = "sim-lib-view-codec"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "Codec-aware and Shape-aware lenses for the SIM Web-UI (WEBUI_4)."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-web"
homepage = "https://github.com/sim-nest/sim-web"

[dependencies]
sim-codec = { version = "0.1.0" }
sim-kernel = { version = "0.1.0" }
sim-lib-scene = { version = "0.1.0", path = "../sim-lib-scene" }
sim-shape = { version = "0.1.0" }

[dev-dependencies]
sim-codec-algol = { version = "0.1.0" }
sim-codec-binary = { version = "0.1.0" }
sim-codec-binary-base64 = { version = "0.1.0" }
sim-codec-chat = { version = "0.1.0" }
sim-codec-json = { version = "0.1.0" }
sim-codec-lisp = { version = "0.1.0" }
sim-codec-mcp = { version = "0.1.0" }
sim-test-support = { version = "0.1.0" }

[lints]
workspace = true
