[package]
name = "sim-lib-view-daw"
version = "0.1.1"
edition = "2024"
license = "MPL-2.0"
description = "DAW timeline, mixer, plugin rack, and synth lenses for the SIM Web-UI (WEBUI_4)."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-web"
homepage = "https://github.com/sim-nest/sim-web"

[dependencies]
sim-cookbook = { version = "0.1.0" }
sim-kernel = { version = "0.1.0" }
sim-lib-daw-session = { version = "0.1.0" }
sim-lib-music-synth = { version = "0.1.0" }
sim-lib-intent = { version = "0.1.0", path = "../sim-lib-intent" }
sim-lib-scene = { version = "0.1.0", path = "../sim-lib-scene" }
sim-lib-stream-core = { version = "0.1.0" }
sim-lib-topology = { version = "0.1.0" }
sim-lib-web-bridge = { version = "0.1.0", path = "../sim-lib-web-bridge" }
sim-value = { version = "0.1.0" }

[build-dependencies]
sim-cookbook = { version = "0.1.0" }

[dev-dependencies]
sim-test-support = { version = "0.1.0" }

[lints]
workspace = true
