[package]
name = "sim-lib-view-doc"
version = "0.1.3"
edition = "2024"
license = "MPL-2.0"
description = "Markup article workspace lens for SIM Web."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-web"
homepage = "https://github.com/sim-nest/sim-web"

[dependencies]
sim-citizen = { version = "0.1.0" }
sim-citizen-derive = { version = "0.1.0" }
sim-codec-doc = { version = "0.1.1" }
sim-cookbook = { version = "0.1.0" }
sim-kernel = { version = "0.1.0" }
sim-lib-intent = { version = "0.1.0", path = "../sim-lib-intent" }
sim-lib-scene = { version = "0.1.0", path = "../sim-lib-scene" }
sim-lib-view = { version = "0.1.0", path = "../sim-lib-view" }
sim-value = { version = "0.1.0" }

[build-dependencies]
sim-cookbook = { version = "0.1.0" }

[dev-dependencies]
sim-codec-json = { version = "0.1.0" }
sim-codec-lisp = { version = "0.1.0" }
sim-test-support = { version = "0.1.0" }

[lints]
workspace = true
