[package]
name = "sim-lib-view-math"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "Math, plotting, tensor, and symbolic lenses for the SIM Web-UI (WEBUI_4)."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-web"
homepage = "https://github.com/sim-nest/sim-web"

[dependencies]
sim-kernel = { version = "0.1.0" }
sim-lib-intent = { version = "0.1.0", path = "../sim-lib-intent" }
sim-lib-scene = { version = "0.1.0", path = "../sim-lib-scene" }
sim-value = { version = "0.1.0" }

[lints]
workspace = true
