[package]
name = "sim-lib-view-spatial"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "Spatial glasses surface encoding over the shared SIM Web Scene and device adapters."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-web"
homepage = "https://github.com/sim-nest/sim-web"

[dependencies]
sim-cookbook = { version = "0.1.0" }
sim-kernel = { version = "0.1.0" }
sim-lib-scene = { version = "0.1.4", path = "../sim-lib-scene" }
sim-lib-view = { version = "0.1.0", path = "../sim-lib-view" }
sim-lib-view-device = { version = "0.1.0", path = "../sim-lib-view-device" }
sim-value = { version = "0.1.0" }

[build-dependencies]
sim-cookbook = { version = "0.1.0" }

[lints]
workspace = true
