[package]
name = "sim-lib-view-wrist"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "Round watch glance budgets over the shared SIM Web device adapter."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-web"
homepage = "https://github.com/sim-nest/sim-web"

[dependencies]
sim-cookbook = { version = "0.1.0" }
sim-kernel = { version = "0.1.0" }
sim-lib-view-device = { version = "0.1.0", path = "../sim-lib-view-device" }
sim-value = { version = "0.1.0" }

[build-dependencies]
sim-cookbook = { version = "0.1.0" }

[dev-dependencies]
sim-lib-scene = { version = "0.1.3", path = "../sim-lib-scene" }

[lints]
workspace = true
