[package]
name = "sim-lib-web-bridge"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "Session and transport bridge over realize/EvalFabric: the Intent/Scene bus for the SIM Web-UI (WEBUI_4)."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-web"
homepage = "https://github.com/sim-nest/sim-web"

[dependencies]
sim-kernel = { version = "0.1.0" }
sim-lib-scene = { version = "0.1.0", path = "../sim-lib-scene" }
sim-lib-server = { version = "0.1.0" }
sim-lib-stream-core = { version = "0.1.0" }
sim-lib-stream-fabric = { version = "0.1.0" }
sim-lib-view = { version = "0.1.0", path = "../sim-lib-view" }
sim-value = { version = "0.1.0" }

[dev-dependencies]
sim-codec = { version = "0.1.0" }
sim-codec-lisp = { version = "0.1.0" }
sim-lib-intent = { version = "0.1.0", path = "../sim-lib-intent" }

[lints]
workspace = true
