[package]
name = "sim-lib-web-bridge"
version = "0.1.1"
edition = "2024"
license = "MPL-2.0"
description = "Session and transport bridge over realize/EvalFabric for the Intent/Scene bus."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-web"
homepage = "https://github.com/sim-nest/sim-web"

[dependencies]
sim-cookbook = { version = "0.1.0" }
sim-kernel = { version = "0.1.0" }
sim-lib-scene = { version = "0.1.0", path = "../sim-lib-scene" }
sim-lib-server = { version = "0.1.0" }
sim-lib-stream-core = { version = "0.1.0" }
sim-lib-stream-fabric = { version = "0.1.0" }
sim-lib-intent = { version = "0.1.0", path = "../sim-lib-intent" }
sim-lib-view = { version = "0.1.0", path = "../sim-lib-view" }
sim-lib-view-device = { version = "0.1.0", path = "../sim-lib-view-device" }
sim-lib-view-spatial = { version = "0.1.0", path = "../sim-lib-view-spatial" }
sim-value = { version = "0.1.0" }

[build-dependencies]
sim-cookbook = { version = "0.1.0" }

[dev-dependencies]
sim-codec = { version = "0.1.0" }
sim-codec-lisp = { version = "0.1.0" }
sim-kernel = { version = "0.1.0", features = ["test-support"] }
sim-shape = { version = "0.1.0" }

[lints]
workspace = true
